# desafio-fastapi

api_service/: main.py  pyproject.toml
api_service/api/v1/: api.py
api_service/api/v1/endpoints/: stock.py
api_service/config/: config.py
api_service/middlewares/: authentication.py
stock_service/: main.py  pyproject.toml
stock_service/api/v1/: api.py
stock_service/api/v1/endpoints/: stock.py
stock_service/config/: config.py
stock_service/utils/: logs.py
